Styling fixes
Styling all buttons in the application, adding appropriate margin to
right of table heads (to accomodate for scrollbar in body), adding
matching borders to all inputs, making delete buttons distinctly
different

--- a/src/app/cms/cms-user-projects/user-projects.component.css
+++ b/src/app/cms/cms-user-projects/user-projects.component.css
@@ -21,11 +21,7 @@ table {
     margin-bottom: 1%;
 }
 
-.head {
-    width: 98%;
-}
-
-.topOfTable {
+.tableHead {
     margin-top: 3%;
 }
 
