--- a/src/app/cms/reusable/code-editor/code-editor.component.css
+++ b/src/app/cms/reusable/code-editor/code-editor.component.css
@@ -1,7 +1,6 @@
 textarea {
     min-height: 250px;
     width: 99%;
-    border: none;
 }
 .right {
     float: right;
