--- a/src/app/cms/reusable/content/file-upload/file-upload.component.css
+++ b/src/app/cms/reusable/content/file-upload/file-upload.component.css
@@ -14,3 +14,8 @@ img {
 img[src="null"]{
     display: none;
 }
+
+:host.static app-media-item-gallery.visible {
+    position: static;
+    width: 50%;
+}
