--- a/src/app/cms/reusable/content/wysiwyg-html/wysiwyg-html.component.css
+++ b/src/app/cms/reusable/content/wysiwyg-html/wysiwyg-html.component.css
@@ -5,6 +5,5 @@ label {
     min-height: 200px;
     resize: vertical;
     overflow-y: scroll;
-    border: 1px solid black;
     background-color: white;
 }
