--- a/src/app/cms/reusable/history/history-display/history-display.component.css
+++ b/src/app/cms/reusable/history/history-display/history-display.component.css
@@ -15,3 +15,7 @@ textarea {
 table {
     background-color: white;
 }
+
+.button.cms.bottom-tabs {
+    margin-bottom: -2px;
+}
